--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -11,7 +11,6 @@ dracula:
     - &FG        '#bcbec4'
     - &SELECTION '#44475A'
     - &COMMENT   '#7a7e85'
-    - &LG_PINK      '#FF79C6'
     - &RED          '#ad3e3b'
     - &PURPLE       '#c77ebb'
     - &GREEN        '#6aab73'
@@ -30,7 +29,7 @@ dracula:
     - &COLOR2        '#6aab73'
     - &COLOR3        '#F1FA8C'
     - &COLOR4        '#cf8e6d'
-    - &COLOR5        '#FF79C6'
+    - &COLOR5        '#c77ebb'
     - &COLOR6        '#8BE9FD'
     - &COLOR7        '#bcbec4'
     - &COLOR8        '#7a7e85'
@@ -109,7 +108,7 @@ colors:
   inputOption.activeBorder: *ORANGE                                             # Border color of activated options in input fields
   inputValidation.infoForeground:                                               # Input validation foreground color for information severity
   inputValidation.infoBackground:                                               # Input validation background color for information severity
-  inputValidation.infoBorder: *LG_PINK                                             # Input validation border color for information severity
+  inputValidation.infoBorder: *PURPLE                                             # Input validation border color for information severity
   inputValidation.warningForeground:                                            # Input validation foreground color for warning severity
   inputValidation.warningBackground:                                            # Input validation background color for information warning
   inputValidation.warningBorder: *ORANGE                                        # Input validation border color for warning severity
@@ -128,7 +127,7 @@ colors:
   badge.background: *SELECTION                                                  # Badge background color
 
   # Progress Bar
-  progressBar.background: *LG_PINK                                                 # Background color of the progress bar shown for long running operations
+  progressBar.background: *PURPLE                                                 # Background color of the progress bar shown for long running operations
 
   # List & Trees
   list.activeSelectionBackground: *SELECTION                                    # List/Tree background color for the selected item when the list/tree is active
@@ -150,9 +149,9 @@ colors:
   activityBar.dropBackground:                                                   # Drag and drop feedback color for the Activity Bar items
   activityBar.foreground: *FG                                                   # Activity bar foreground color (for example used for the icons)
   activityBar.border:                                                           # Activity Bar border color with the Side Bar
-  activityBar.activeBorder: !alpha [*LG_PINK, 80]                                  # Activity Bar indicator color
+  activityBar.activeBorder: !alpha [*PURPLE, 80]                                  # Activity Bar indicator color
   activityBar.activeBackground: !alpha [*ORANGE, 10]                            # Activity Bar indicator background color
-  activityBarBadge.background: *LG_PINK                                            # Activity notification badge background color
+  activityBarBadge.background: *PURPLE                                            # Activity notification badge background color
   activityBarBadge.foreground: *FG                                              # Activity notification badge foreground color
 
   # Side Bar
@@ -174,7 +173,7 @@ colors:
   tab.activeBackground: *BG                                                     # Active Tab background color
   tab.activeForeground: *FG                                                     # Active Tab foreground color in an active group
   tab.border: *BGDarker                                                         # Border to separate Tabs from each other
-  tab.activeBorderTop: !alpha [*LG_PINK, 80]                                       # A border drawn to the top of the active tab
+  tab.activeBorderTop: !alpha [*PURPLE, 80]                                       # A border drawn to the top of the active tab
   tab.activeBorder:                                                             # A border drawn to the bottom of the active tab
   tab.unfocusedActiveBorder:                                                    # A border drawn to the bottom of the active tab in an editor group that is not focused
   tab.inactiveBackground: *BGDark                                               # Inactive Tab background color
@@ -318,7 +317,7 @@ colors:
   # Panel Colors
   panel.background: *BG                                                         # Panel background color
   panel.border: *ORANGE                                                         # Panel border color on the top separating to the editor
-  panelTitle.activeBorder: *LG_PINK                                                # Border color for the active panel title
+  panelTitle.activeBorder: *PURPLE                                                # Border color for the active panel title
   panelTitle.activeForeground: *FG                                              # Title color for the active panel
   panelTitle.inactiveForeground: *COMMENT                                       # Title color for the inactive panel
 
@@ -685,7 +684,7 @@ tokenColors:
     scope:
     - entity.other.attribute-name.parent-selector
     settings:
-      foreground: *LG_PINK
+      foreground: *PURPLE
 
   - name: HTML/CSS attribute names
     scope:
@@ -763,7 +762,7 @@ tokenColors:
     scope:
     - meta.selector
     settings:
-      foreground: *LG_PINK
+      foreground: *PURPLE
 
 # =============================================================================
 # JSX
@@ -984,7 +983,7 @@ tokenColors:
     # NOTE: The scope name is a misnomer. It is actually non-capture operators
     - punctuation.definition.group.capture.regexp
     settings:
-      foreground: *LG_PINK
+      foreground: *PURPLE
 
   - name: RegExp start and end characters
     scope:
