--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -22,6 +22,7 @@ dracula:
     - &CYAN         '#2fbaa3'
     - &YELLOW       '#d5b778'
     - &LINK         '#56a8f5'
+    - &NAVY         '#2e436e'
   ansi:
     - &COLOR0        '#21222C'
     - &COLOR1        '#ad3e3b'
@@ -81,7 +82,7 @@ colors:
   focusBorder: *COMMENT                                                         # Overall border color for focused elements. This color is only used if not overridden by a component
   foreground: *FG                                                               # Overall foreground color. This color is only used if not overridden by a component
   widget.shadow:                                                                # Shadow color of widgets such as Find/Replace inside the editor
-  selection.background: *ORANGE                                                 # Background color of text selections in the workbench (for input fields or text areas, does not apply to selections within the editor and the terminal)
+  selection.background: *NAVY                                                 # Background color of text selections in the workbench (for input fields or text areas, does not apply to selections within the editor and the terminal)
   errorForeground: *RED                                                         # Overall foreground color for error messages (this color is only used if not overridden by a component)
 
   # Button Control
