change theme name

--- a/src/dracula.yml
+++ b/src/dracula.yml
@@ -1,5 +1,5 @@
 $schema: vscode://schemas/color-theme
-name: Dracula2
+name: Dark theme by KNeczaj
 author: Zeno Rocha, Kamil Neczaj
 maintainers:
   - Kamil Neczaj <kneczaj@gmail.com>
